# employee-portal

./: .gitignore  pyproject.toml  render.yaml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3a11e05eecd5_initial_schema.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  attendance.py  auth.py  employees.py  festivals.py  leave.py
backend/app/core/: config.py  constants.py  database.py  security.py
backend/app/crud/: attendance.py  employee.py  festival.py  leave.py
backend/app/models/: __init__.py  attendance.py  employee.py  festival.py  leave_request.py
backend/app/schemas/: attendance.py  auth.py  employee.py  festival.py  leave.py
frontend/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/assets/css/: globals.css
frontend/src/components/: Router.tsx
frontend/src/components/admin/: AdminAttendance.tsx  AdminRequests.tsx  AdminSettings.tsx  AdminTimeOff.tsx  FestivalCalendar.tsx
frontend/src/components/auth/: Login.tsx  RequireRole.tsx
frontend/src/data/: festivals.ts
frontend/src/hooks/: useCurrentEmployee.ts
frontend/src/layouts/: AdminLayout.tsx  Layout.tsx
frontend/src/redux/: appSlice.ts  attendanceSlice.ts  authSlice.ts  leaveSlice.ts  storage.ts  store.ts
frontend/src/types/: index.ts
frontend/src/utils/: seedData.ts  toast.ts  utility.ts
(+24 files in other folders)
